--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Posture Reboot</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" [routerLink]="'.'">Posture Reboot</a>
+  <button class="navbar-toggler" type="button" (click)="navbarCollapsed = !navbarCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="nav navbar-nav">
+  <div [ngbCollapse]="navbarCollapsed" class="collapse navbar-collapse">
+    <ul class="navbar-nav">
       <li class="nav-item" [routerLinkActive]="['link-active']">
-        <a class="nav-link text-white" [routerLink]="['/']">TIMER</a>
+        <a class="nav-link text-white" [routerLink]="['/']" (click)="navbarCollapsed = true">TIMER</a>
       </li>
       <li class="nav-item" [routerLinkActive]="['link-active']">
-        <a class="nav-link text-white" [routerLink]="['/exercises']">EXERCISES</a>
+        <a class="nav-link text-white" [routerLink]="['/exercises']"  (click)="navbarCollapsed = true">EXERCISES</a>
       </li>
       <li class="nav-item" [routerLinkActive]="['link-active']">
-        <a class="nav-link text-white" [routerLink]="['/settings']">SETTINGS</a>
+        <a class="nav-link text-white" [routerLink]="['/settings']" (click)="navbarCollapsed = true">SETTINGS</a>
       </li>
     </ul>
   </div>
