--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'variables';
-@import '../node_modules/bootstrap/scss/bootstrap';
+/*@import '../node_modules/bootstrap/scss/bootstrap';*/
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+@import '~ngx-toastr/toastr-bs4-alert';
+
