Saved exercises in state
Added the ability to add an exercise, and delete an exercise. Also saved the exercises in state for future use.

--- a/src/app/exercises/components/exercises-list/exercises-list.component.html
+++ b/src/app/exercises/components/exercises-list/exercises-list.component.html
@@ -3,6 +3,15 @@
     <h5>EXERCISES</h5>
   </div>
   <ul class="list-group list-group-flush">
-    <app-exercises-row *ngFor="let myExercise of exercises" [exercise]="myExercise"></app-exercises-row>
+    <app-exercises-row
+      *ngFor="let myExercise of exercises"
+      [exercise]="myExercise"
+      (exerciseDeleted)="onExerciseDeleted($event)"
+    ></app-exercises-row>
   </ul>
+  <div class="card-footer">
+    <button class="btn btn-primary" (click)="onAddExerciseClicked()">
+      ADD EXERCISE
+    </button>
+  </div>
 </div>
