--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -41,7 +41,7 @@
       class="btn btn-primary"
       [disabled]="!settingsForm.valid || !settingsForm.dirty"
     >
-      Save
+      SAVE
     </button>
     </div>
 
