--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -24,6 +24,9 @@
       </div>
       <div class="card-body text-center" >
             Next Exercise: {{ (nextExercise$ | async).title }}
+            <button type="button" class="btn btn-primary btn-block mt-3"(click)="skipExercise()">
+              SKIP EXERCISE
+            </button>
       </div>
     </div>
   </div>
