--- a/src/app/exercises/containers/exercises-shell/exercises-shell.component.html
+++ b/src/app/exercises/containers/exercises-shell/exercises-shell.component.html
@@ -2,4 +2,5 @@
   [exercises]="exercises$ | async"
   (exerciseDeleted)="onExerciseDeleted($event)"
   (addExerciseClicked)="onAddExerciseClicked()"
+  (exerciseTitleClicked)="onExerciseTitleClicked($event)"
 ></app-exercises-list>
